# cis5-smart-contract-dapp

./: README.md
client/: .env  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
client/scripts/: main.mjs
client/src/app/: layout.tsx  page.js  page.tsx
client/src/app/tokens/: page.jsx
client/src/app/wallet/: page.jsx
client/src/components/: Home.jsx  Wallet.jsx
client/src/constants/: module.ts  module_smart_contract_wallet.ts  smart_contract.ts
client/src/helpers/: chaperone.ts  index.ts
contracts/: Cargo.toml  README.md
contracts/src/: lib.rs
contracts/tests/: tests.rs
