[package]
name = "smart-contract-wallet"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = {version = "10.1.0", default-features = false}
concordium-cis2 = {version = "6.1.0", features = ["u256_amount"]}
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
concordium-contracts-common = "*"

[dev-dependencies]
concordium-smart-contract-testing = "4.2"
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1